fix map overflow

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -9,3 +9,9 @@ body {
 #root {
   height: 100%;
 }
+
+#root > div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
