--- a/app/assets/stylesheets/components/search.scss
+++ b/app/assets/stylesheets/components/search.scss
@@ -49,11 +49,29 @@
 //   position: relative;
 // }
 
-#map-container {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+
+
+.attraction-search {
+  display: block;
+  flex-grow: 1;
+
+  .map-container {
+    height: 100%;
+    width: 100%;
+
+
+    #google-map {
+      width: 100%;
+      height: calc(100% - 56px);
+      position: absolute;
+    }
+  }
 }
+
+// .search-result {
+//   width: 100%;
+//   height: 100%;
+// }
 
 // #header.searching {
 //   background-color: $light-gray
